no-ssl/traefik-echo-test.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: echo
  labels:
    app: echo
spec:
 replicas: 2
 selector:
   matchLabels:
     app: echo
     task: test
 template:
   metadata:
     labels:
       app: echo
       task: test
   spec:
     containers:
       - name: echo
         image: gcr.io/google_containers/echoserver:1.8
         ports:
           - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 80
  selector:
    app: echo
    task: test

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: echo.house.local
      http:
        paths:
          - path: /
            backend:
              serviceName: echo
              servicePort: http
